--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build && electron ."
+    "electron": "ng build && electron .",
+    "electron:dev": "cross-env ELECTRON_DEV=true concurrently \"ng serve --host 0.0.0.0\" \"wait-on http://localhost:4200 && electron .\"",
+    "build:electron": "npm run build && electron ."
   },
   "private": true,
   "dependencies": {
@@ -30,6 +32,8 @@
     "@angular/cli": "^17.2.3",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "electron": "^36.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -37,6 +41,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "wait-on": "^7.2.0"
   }
 }
